# ariadne-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  ariadne.cpp  ariadne.hpp  example.cpp  models.json  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  eval.yml  model-check.yml  release.yml
cmake/: ariadne-release-config.cmake  ariadne.pc.in  ariadneConfig.cmake.in  embed_resource.cmake  version.hpp.in
ports/ariadne/: portfile.cmake  usage  vcpkg.json
studio/: index.html  studio.cpp  studio_ui.hpp
tests/: benchmark.cpp  eval_runner.cpp  unit_test.cpp
